# kakeibo

./: .gitignore  README.md  Taskfile.yml  dir.md  pyproject.toml
archive_legacy/: eda.py  test_wise.py
archive_legacy/parsers/: generic_parser.py  transaction_history_parser.py  transaction_parser.py
src/: bank_parser.py  config.py  eda.py  kakeibo_integrator.py
src/kakeibo/: api.py  cli.py  config.py
src/kakeibo/adapters/: supabase_repo.py
src/kakeibo/adapters/parsers/: generic_csv.py  sony.py
src/kakeibo/domain/: cleaning.py  models.py
src/kakeibo/ports/: parser.py  repository.py
src/kakeibo/use_cases/: process_file.py
src/parsers/: aplus_parser.py  enavi_parser.py  generic_csv_parser.py  init.py  sony_parser.py
tests/: test_cleaning.py
